--- a/wp-content/themes/vertisubtheme/assets/CardNews-Bt6LV50Q.css
+++ b/wp-content/themes/vertisubtheme/assets/CardNews-Bt6LV50Q.css
@@ -1,36 +1,46 @@
 .HomePage {
   background-color: #121214;
 }
+
 .modal-filp {
   -webkit-transform-style: preserve-3d;
 }
+
 .modal-front,
 .modal-back {
   -webkit-backface-visibility: hidden;
 }
+
 .feed-news a:nth-of-type(7),
 .feed-news a:nth-of-type(8),
 .feed-news a:nth-of-type(9) {
   display: none;
 }
+
 .feed-news a:nth-of-type(1) {
   order: 0;
 }
+
 .feed-news a:nth-of-type(2) {
   order: 2;
 }
+
 .feed-news a:nth-of-type(3) {
   order: 5;
 }
+
 .feed-news a:nth-of-type(4) {
   order: 1;
 }
+
 .feed-news a:nth-of-type(5) {
   order: 3;
 }
+
 .feed-news a:nth-of-type(6) {
   order: 6;
 }
+
 @media screen and (min-width: 769px) {
   .feed-news a:nth-of-type(7),
   .feed-news a:nth-of-type(8),
@@ -38,35 +48,44 @@
     display: flex;
   }
 }
+
 .modal-back-description::-webkit-scrollbar {
   display: block;
   width: 6px;
   border: 2px solid #d9d9d9;
   border-radius: 25px;
 }
+
 .modal-back-description::-webkit-scrollbar-track {
   background-color: #d9d9d9;
   border-radius: 25px;
 }
+
 .modal-back-description::-webkit-scrollbar-track:hover {
   background-color: #e9e9e9;
 }
+
 .modal-back-description::-webkit-scrollbar-track:active {
   background-color: #e9e9e9;
 }
+
 .modal-back-description::-webkit-scrollbar-thumb {
   border-radius: 25px;
   background-color: #313131;
 }
+
 .modal-back-description::-webkit-scrollbar-thumb:hover {
   background-color: #0c0c0c;
 }
+
 .modal-back-description::-webkit-scrollbar-thumb:active {
   background-color: #0c0c0c;
 }
+
 .parallax-container {
   position: relative;
 }
+
 .short-description-container {
   display: flex;
   height: 120vh;
@@ -75,9 +94,10 @@
   align-items: center;
   overflow: hidden;
   --tw-bg-opacity: 1;
-  background-color: rgba(187, 12, 43, var(--tw-bg-opacity));
+  background-color: rgb(187 12 43 / var(--tw-bg-opacity));
   padding-top: 150px;
 }
+
 @media (min-width: 1024px) {
   .short-description-container {
     display: grid;
@@ -87,12 +107,14 @@
     place-content: center;
   }
 }
+
 @media screen and (max-height: 860px) {
   .short-description-container {
     height: 105vh;
-    min-height: 120vh;
+    min-height: 105vh;
   }
 }
+
 .short-description__info {
   display: grid;
   height: 500px;
@@ -102,15 +124,16 @@
   border-bottom-right-radius: 9999px;
   border-width: 4px;
   border-left-width: 0px;
-  display: hidden;
   --tw-border-opacity: 1;
   border-color: rgb(223 223 76 / var(--tw-border-opacity));
 }
+
 @media (min-width: 1024px) {
   .short-description__info {
     height: 750px;
   }
 }
+
 @media screen and (max-height: 768px) {
   @media (min-width: 1024px) {
     .short-description__info {
@@ -118,22 +141,26 @@
     }
   }
 }
+
 .short-description__info .description {
   margin-left: 23px;
   width: 70%;
 }
+
 @media (min-width: 1024px) {
   .short-description__info .description {
-    margin-left: 160px;
-    width: 50%;
+    margin-left: 60px;
+    width: 70%;
   }
 }
+
 @media (min-width: 1280px) {
   .short-description__info .description {
     margin-left: 195px;
     width: 40%;
   }
 }
+
 @media screen and (max-height: 768px) {
   @media (min-width: 1280px) {
     .short-description__info .description {
@@ -142,20 +169,23 @@
     }
   }
 }
+
 .short-description__info .description h2 {
-  margin-bottom: 24px;
+  margin-bottom: 30px;
   font-family: "Oswald", sans-serif;
-  font-size: 31px;
+  font-size: 40px;
   line-height: 38.75px;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+
 @media (min-width: 1280px) {
   .short-description__info .description h2 {
     font-size: 48px;
     line-height: 60px;
   }
 }
+
 @media screen and (max-height: 768px) {
   @media (min-width: 1280px) {
     .short-description__info .description h2 {
@@ -164,23 +194,75 @@
     }
   }
 }
+/* Contenedor de la imagen circular */
 .short-description__image {
-  display: flex;
-  height: 500px;
-  width: 500px;
-  justify-content: center;
+  width: 90vw;
+  max-width: 350px;
+  height: 90vw;              /* Mismo valor que width para asegurar círculo */
+  max-height: 350px;         /* Mismo valor que max-width */
+  border-radius: 50%;
   overflow: hidden;
+  margin: 0 auto;
+  display: block;
+  position: relative;
+  flex-shrink: 0;            /* Evita que se comprima */
 }
+
+/* Asegurar que la imagen llene el contenedor circular */
+.short-description__image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  display: block;
+}
+
+/* Tablet (768px - 1023px) */
+@media (min-width: 768px) {
+  .short-description__image {
+    width: 50vw;
+    max-width: 600px;
+    height: 50vw;           /* Mismo valor que width */
+    max-height: 600px;      /* Mismo valor que max-width */
+    margin: 0 auto;
+  }
+}
+
+/* Desktop (1024px en adelante) */
 @media (min-width: 1024px) {
   .short-description__image {
-    height: 750px;
+    width: 40vw;
+    max-width: 750px;
+    height: 40vw;           /* Mismo valor que width */
+    max-height: 750px;      /* Mismo valor que max-width */
+    margin: 0;
   }
 }
-@media screen and (max-height: 768px) {
-  .short-description__image {
-    height: 550px;
+
+/* Extra: Si necesitas centrado en desktop también */
+@media (min-width: 1024px) {
+  .short-description__image.centered {
+    margin: 0 auto;
   }
 }
+
+/* Soporte para navegadores que no soportan aspect-ratio */
+@supports not (aspect-ratio: 1 / 1) {
+  .short-description__image::before {
+    content: "";
+    display: block;
+    padding-top: 100%;      /* Mantiene proporción 1:1 */
+  }
+  
+  .short-description__image img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 .card-news {
   position: relative;
   height: 310px;
@@ -189,6 +271,7 @@
   overflow: hidden;
   border-radius: 32px;
 }
+
 .card-news__image {
   position: absolute;
   top: 0;
@@ -198,6 +281,7 @@
   background-color: rgb(20 18 19 / var(--tw-bg-opacity));
   transition: opacity 0.3s ease-in-out;
 }
+
 .card-news__content {
   position: absolute;
   bottom: -80%;
@@ -213,11 +297,13 @@
   transition-duration: 0.6s;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 @media (min-width: 1024px) {
   .card-news__content {
     padding: 32px;
   }
 }
+
 .card-news__content h4 {
   margin-bottom: 4px;
   width: 92%;
@@ -227,21 +313,24 @@
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+
 .card-news__content h5 {
   margin-bottom: 40px;
-  font-family: "Oswald", sans-serif;;
+  font-family: "Oswald", sans-serif;
   font-size: 14px;
   line-height: 25px;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+
 .card-news__content p {
-  font-family: "Oswald", sans-serif;;
+  font-family: "Oswald", sans-serif;
   font-size: 16px;
   line-height: 24px;
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
+
 .card-news:hover .card-news__image img {
   --tw-scale-x: 1.1;
   --tw-scale-y: 1.1;
@@ -250,9 +339,11 @@
     scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   opacity: 0.3;
 }
+
 .card-news:hover .card-news__content {
   bottom: 0;
 }
+
 .card-news-text {
   cursor: pointer;
   border-radius: 32px;
@@ -263,16 +354,19 @@
   transition-duration: 0.6s;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .card-news-text:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(231 59 31 / var(--tw-bg-opacity));
 }
+
 @media (min-width: 1024px) {
   .card-news-text {
     order: 0;
     padding: 32px;
   }
 }
+
 .card-news-text h4 {
   margin-bottom: 4px;
   overflow: hidden;
@@ -286,33 +380,38 @@
   --tw-text-opacity: 1;
   color: rgb(20 18 19 / var(--tw-text-opacity));
 }
+
 @media (min-width: 1024px) {
   .card-news-text h4 {
     font-size: 25px;
     line-height: 31.25px;
   }
 }
+
 .card-news-text h5 {
   margin-bottom: 40px;
-  font-family: "Oswald", sans-serif;;
+  font-family: "Oswald", sans-serif;
   font-size: 12px;
   line-height: 24px;
   --tw-text-opacity: 1;
   color: rgb(76 76 76 / var(--tw-text-opacity));
 }
+
 @media (min-width: 1024px) {
   .card-news-text h5 {
     font-size: 14px;
     line-height: 24px;
   }
 }
+
 .card-news-text p {
-  font-family: "Oswald", sans-serif;;
+  font-family: "Oswald", sans-serif;
   font-size: 14px;
   line-height: 24px;
   --tw-text-opacity: 1;
   color: rgb(76 76 76 / var(--tw-text-opacity));
 }
+
 @media (min-width: 1024px) {
   .card-news-text p {
     font-size: 16px;
