--- a/wp-content/themes/vertisubtheme/assets/CardNews-Bt6LV50Q.css
+++ b/wp-content/themes/vertisubtheme/assets/CardNews-Bt6LV50Q.css
@@ -125,7 +125,7 @@
   border-width: 4px;
   border-left-width: 0px;
   --tw-border-opacity: 1;
-  border-color: rgb(223 223 76 / var(--tw-border-opacity));
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
 @media (min-width: 1024px) {
@@ -284,6 +284,7 @@
 
 .card-news__content {
   position: absolute;
+  width: 100%;
   bottom: -80%;
   z-index: 2;
   border-top-left-radius: 24px;
