fix: update script versioning to use file modification time

--- a/wp-content/themes/vertisubtheme/style.css
+++ b/wp-content/themes/vertisubtheme/style.css
@@ -521,7 +521,7 @@ body {
 
 /* Hide the "Noticias" menu item  */
 #menu-inicio .nav-item:nth-child(6) {
-  display: none;
+  display: none !important;
 }
 
 .nav-link {
